--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,22 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
 	<title>Discord Message Web Components</title>
+	<script>
+		window.$discordMessage = {
+			profiles: {
+				sanc: {
+					author: 'Sanctuary',
+					avatar: 'https://i.imgur.com/0TeacfY.png',
+					roleColor: '#0099ff'
+				},
+				twelve: {
+					author: 'Twelve',
+					avatar: 'https://i.imgur.com/Mc0F0Hf.png',
+					roleColor: '#70f0b4',
+				},
+			}
+		}
+	</script>
 	<script type="module" src="/build/wc-discord-message.esm.js"></script>
 	<script nomodule src="/build/wc-discord-message.js"></script>
 	<style>
@@ -49,10 +65,10 @@
 				<discord-message author="Dawn" avatar="red">
 					Hi, I'm new here too!
 				</discord-message>
-				<discord-message author="Sanctuary" avatar="https://i.imgur.com/0TeacfY.png" role-color="#0099ff">
+				<discord-message profile="sanc">
 					Hey, <discord-mention>User</discord-mention> and <discord-mention>Dawn</discord-mention>. Welcome to our server!<br />Be sure to read through the <discord-mention type="channel">rules</discord-mention>. You can ping <discord-mention type="role" color="#70f0b4">Support</discord-mention> if you need help.
 				</discord-message>
-				<discord-message author="Twelve" avatar="https://i.imgur.com/Mc0F0Hf.png" role-color="#70f0b4">
+				<discord-message profile="twelve">
 					Hello everyone! How's it going?
 				</discord-message>
 				<discord-message author="User">
@@ -61,7 +77,7 @@
 				<discord-message author="Yotsuba" avatar="https://i.imgur.com/amw0MGJ.png">
 					I'm doing well, <discord-mention>Twelve</discord-mention>. What about yourself?
 				</discord-message>
-				<discord-message author="Twelve" avatar="https://i.imgur.com/Mc0F0Hf.png" role-color="#70f0b4">
+				<discord-message profile="twelve">
 					!8ball How am I doing today?
 				</discord-message>
 				<discord-message author="Rinon" avatar="https://i.imgur.com/axQ9wJl.png" role-color="violet" bot>
@@ -82,7 +98,7 @@
 			</div>
 			<h3 class="title">Mentions</h3>
 			<discord-messages>
-				<discord-message author="Sanctuary" avatar="https://i.imgur.com/0TeacfY.png" role-color="#0099ff">
+				<discord-message profile="sanc">
 					Hey, <discord-mention>User</discord-mention> and <discord-mention>Dawn</discord-mention>. Welcome to our server! Be sure to read through the <discord-mention type="channel">rules</discord-mention>. You can ping <discord-mention type="role" color="#70f0b4">Support</discord-mention> if you need help.
 				</discord-message>
 				<discord-message>
