feat(messages): option to remove background
This is if people want the messages to blend with their own site's background rather than using Discord's background color

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,11 @@
 				<discord-message>Waiting for the day when</discord-message>
 				<discord-message>Compact mode would be turned on</discord-message>
 			</discord-messages>
+			<h3 class="title">No Background mode</h3>
+			<discord-messages no-background>
+				<discord-message>This message blends perfectly with your own background</discord-message>
+				<discord-message>No Background mode is turned on here</discord-message>
+			</discord-messages>
 			<h3 class="title">Mentions</h3>
 			<discord-messages>
 				<discord-message profile="sanc">
