feat(message): add verified bot option

--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,12 @@
 					Hey there <discord-mention highlight>Sanctuary</discord-mention>, thanks! I will!
 				</discord-message>
 			</discord-messages>
+			<h3 class="title">Verified Discord bots</h3>
+			<discord-messages>
+				<discord-message author="AwesomeBot" role-color="#7289da" bot verified>
+					Wow I just got verified!
+				</discord-message>
+			</discord-messages>
 			<h3 class="title">Full embed example</h3>
 			<discord-messages>
 				<discord-message>
