--- a/src/index.html
+++ b/src/index.html
@@ -149,13 +149,13 @@
 					<discord-embed slot="embeds">
 						<discord-embed-fields slot="fields">
 							<discord-embed-field field-title="Field title">
-								Some value here. Some value here. Some value here.
+								Some value here. Some value here. Some value here
 							</discord-embed-field>
 							<discord-embed-field field-title="Field title">
-								Some value here. Some value here. Some value here.
+								Some value here. Some value here. Some value here
 							</discord-embed-field>
 							<discord-embed-field field-title="Field title">
-								Some value here. Some value here. Some value here.
+								Some value here. Some value here. Some value here
 							</discord-embed-field>
 						</discord-embed-fields>
 					</discord-embed>
